--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -3,18 +3,19 @@
 {% block title %}Hello SiteController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/duchenec/Documents/Modèles Office personnalisés/Bulma/colemeon/colemeon/src/Controller/SiteController.php'|file_link(0) }}">src/Controller/SiteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/duchenec/Documents/Modèles Office personnalisés/Bulma/colemeon/colemeon/templates/site/index.html.twig'|file_link(0) }}">templates/site/index.html.twig</a></code></li>
-    </ul>
+   {% for presentation in presentations %}
+      <table class="table table-striped">
+      <tr><td>
+           {{presentation.titre}}
+          {{presentation.activites}}
+           </td></tr></br>
+           </table>
+      {%endfor%}
+
+    
 </div>
 {% endblock %}
