--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,45 @@
         {% endblock %}
     </head>
     <body>
+    <link href="http://fonts.cdnfonts.com/css/segoe-ui-4" rel="stylesheet">
+<style>
+    * {
+        font-family: 'Segoe UI', sans-serif;
+    }
+</style>
+
+ <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <img class="navbar-brand" href="#" src="assets/logo.png" max-width:"100vh" >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Prestation</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Contact</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">|</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Se connecter</a>
+        </li>
+       
+    </ul>
+       
+    </div>
+  </div>
+</nav>
         {% block body %}{% endblock %}
     </body>
 </html>
