--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -2,20 +2,21 @@
 
 {% block title %}Hello AvisController!{% endblock %}
 {% block body %}
+
 <div class="container">
-<h1 class="sublined"><center>Bienvenue sur notre page d'avis</center></h1></br>
-<form method="POST" action="site/create_avis">
+<h1 class="text-decoration-underline text-warning" class="text-warning"><center>Bienvenue sur notre page d'avis</center></h1></br>
+<form method="POST" >
     <table class="table table-striped">   
     <tr>
     <td><center><input type="text" id="loginUser" size="32"  placeholder="Votre nom" name="login" required></center></td>
     <td><center><input type="text" id="fisrtnameUser" size="32"  placeholder=" Votre prénom" name="firstname" required></center></td></tr>
     <tr>
     <td><center><input type="text"  size="72"  placeholder="Votre avis"  required></center></td>
-    <td><center><input type="button" name="Enregistrer"  value="Enregistrer"/></center></td>
+    <td><center><button type="submit" class="btn">Enregistrer</button></center></td>
    
             </table></br>
             
-       <h1><center>Liste de nos avis</center></h1></br>     
+       <h1 class="text-warning"><center>Liste de nos avis</center></h1></br>     
     <table class="table table-striped">   
     <tr>
         <th scope="col">Nom</th>
