<feat>(amélioration du site): ajout image

--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -3,7 +3,23 @@
 {% block title %}Hello AvisController!{% endblock %}
 {% block body %}
 
-<div class="container">
+
+<div class="container pb-5 pt-5" style="margin-top:80px">
+  <div class="row align-items-center justify-content-center justify-content-around">
+    <div class="col">
+      <h1 style="font-size:50px" class="pt-5">
+      <strong>PAGE D'AVIS</strong></h1>
+      <p>_______________________</p>
+      <p>Veuillez trouver les avis laissés par les clients sur le site</p>
+      <button type="button" class="btn btn-primary">Voir les avis</button>
+    </div>
+    <div class="col" class="pt-5">
+    <img style="width:150px" src="assets/coche.png"> <!-- Changer lien de l'image -->
+    
+    </div>
+  </div>
+</div>
+ 
 <h1 class="text-decoration-underline text-warning" class="text-warning"><center>Bienvenue sur notre page d'avis</center></h1></br>
 <form method="POST" >
     <table class="table table-striped">   
