<feat>(amélioration du site avis): ajout vagues

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,7 +3,21 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container pb-5 pt-5" style="margin-top:80px">
+<div class="row align-items-center justify-content-center justify-content-around">
+    <div class="col">
+      <h1 style="font-size:50px" class="pt-5">
+      <strong>PAGE DE CONTACT</strong></h1>
+      <p>_______________________</p>
+      <p>Si vous souhaitez en savoir plus, veuillez remplir ce formulaire</p>
+
+    </div>
+    <div class="col">
+    <img style="width:200px" src="assets/R.jfif"> <!-- Changer lien de l'image -->
+    
+    </div>
+
+    
 <h1 class="text-decoration-underline " class="text-warning"><center>Bienvenue sur notre page d'avis</center></h1></br>
 <form method="POST" >
     <table class="table table-striped">   
