--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -13,26 +13,15 @@
       <p>Veuillez trouver les avis laissés par les clients sur le site</p>
       <button type="button" class="btn btn-primary">Voir les avis</button>
     </div>
-    <div class="col" class="pt-5">
+    <div class="col">
     <img style="width:150px" src="assets/coche.png"> <!-- Changer lien de l'image -->
     
     </div>
-  </div>
-</div>
- 
-<h1 class="text-decoration-underline text-warning" class="text-warning"><center>Bienvenue sur notre page d'avis</center></h1></br>
-<form method="POST" >
-    <table class="table table-striped">   
-    <tr>
-    <td><center><input type="text" id="loginUser" size="32"  placeholder="Votre nom" name="login" required></center></td>
-    <td><center><input type="text" id="fisrtnameUser" size="32"  placeholder=" Votre prénom" name="firstname" required></center></td></tr>
-    <tr>
-    <td><center><input type="text"  size="72"  placeholder="Votre avis"  required></center></td>
-    <td><center><button type="submit" class="btn">Enregistrer</button></center></td>
-   
-            </table></br>
-            
-       <h1 class="text-warning"><center>Liste de nos avis</center></h1></br>     
+    </br >
+    </br >
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFC21B" fill-opacity="1" d="M0,0L80,48C160,96,320,192,480,197.3C640,203,800,117,960,101.3C1120,85,1280,139,1360,165.3L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+<div background-color="#FFC21B">
+ <h1 class="text-warning"><center>Liste de nos avis</center></h1></br>     
     <table class="table table-striped">   
     <tr>
         <th scope="col">Nom</th>
@@ -48,6 +37,23 @@
          
     {% endfor %}
     </table>
+    </div>
+ <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFC21B" fill-opacity="1" d="M0,0L80,48C160,96,320,192,480,197.3C640,203,800,117,960,101.3C1120,85,1280,139,1360,165.3L1440,192L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
+<h1 class="text-decoration-underline text-warning" class="text-warning"><center>Bienvenue sur notre page d'avis</center></h1></br>
+<form method="POST" >
+    <table class="table table-striped">   
+    <tr>
+    <td><center><input type="text" id="loginUser" size="32"  placeholder="Votre nom" name="login" required></center></td>
+    <td><center><input type="text" id="fisrtnameUser" size="32"  placeholder=" Votre prénom" name="firstname" required></center></td></tr>
+    <tr>
+    <td><center><input type="text"  size="72"  placeholder="Votre avis"  required></center></td>
+    <td><center><button type="submit" class="btn">Enregistrer</button></center></td>
+   
+            </table></br>
+            
+      
             </form>
+</div>
+  </div>
 </div>
 {% endblock %}
