--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         <link rel="stylesheet" href="assets/bootstrap.min.css">
+        <script src="https://kit.fontawesome.com/b20eb41686.js" crossorigin="anonymous"></script>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -31,13 +32,16 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="#"><i class="fa-solid fa-house"></i> Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
+            <a class="nav-link active" href="#"><i class="fa-solid fa-at"></i> About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="#">Prestation</a>
+            <a class="nav-link active" href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Prestation</a>
+        </li>
+         <li class="nav-item">
+            <a class="nav-link active" href="#">Avis</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" href="#">Contact</a>
@@ -56,4 +60,18 @@
 </nav>
         {% block body %}{% endblock %}
     </body>
+<footer class="text-center">
+        <div class="container text-muted py-4 py-lg-5">
+           
+            <p class="mb-0">Made with ❤️ by Colomeon for 3Cables.</p>
+            <p class="mb-0"></p>
+            <p class="mb-0"><a>About</a> - <a>Avis</a> - <a>Contact</a></p>
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+            <script>
+                AOS.init();
+            </script>
+        </div>
+    </footer>
 </html>
