--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,34 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SiteController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
 
-<div class="container">
-  <div class="row pb-5">
+<div class="container pb-5 pt-5" style="margin-top:80px">
+  <div class="row align-items-center justify-content-center justify-content-around">
     <div class="col">
-    
-      <img style="margin-top: 100px;  width:500px" src="assets/ampoule.png">
+      <img style="width:500px" src="assets/ampoule.png">
     </div>
-
-    <div class="col" style="height:500px">
-      <h1 style="margin-top: 300px; font-size:50px "> <strong>AVEC NOUS, C'EST LE COUP DE FOUDRE ASSURE!</strong></h1>
+    <div class="col pt-5">
+      <h1 style="font-size:50px" class="pt-5">
+      <strong>AVEC NOUS, C'EST LE COUP DE FOUDRE ASSURE!</strong></h1>
       <p>_____________________________</p>
       <p>Bienvenue sur le site de 3Cables</p>
       <button type="button" class="btn btn-primary">Découvrir</button>
     </div>
   </div>
 </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-  <path fill="#fc0404" fill-opacity="1" d="M0,96L80,112C160,128,320,160,480,165.3C640,171,800,149,960,165.3C1120,181,1280,235,1360,261.3L1440,288L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
-</svg>
-<div class="color-red-bg" style="background-color:#fc0404">
+
+
+<br>
+<br>
+<svg class="pt-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,160L60,170.7C120,181,240,203,360,213.3C480,224,600,224,720,186.7C840,149,960,75,1080,53.3C1200,32,1320,64,1380,80L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+<div class="color-red-bg pt-5 pb-5" style="background-color:#fc0404">
 <div class="container">
-  <div class="row pb-5">
+  <div class="row align-items-center justify-content-center justify-content-around" style="padding-top:80px; padding-bottom: 80px">
     <div class="col">
-      <h2 style="margin-top: 200px; font-size:32px"> <strong>Qui suis-je?</strong></h2>
-      <p style="color:black">Test</p>
-      <button type="button" class="btn btn-primary">En savoir plus <i class="fa-solid fa-arrow-right"></i></button>
+      <h2 style="color:white; font-size:32px"> <strong>Qui suis-je?</strong></h2>
+      <p style="color:white;font-size:22px; font-weight:450">
+        Mon nom est Monsieur <strong>A. GALISSARD</strong>, je suis un éléctriciens et gérant de l'entreprise <strong>3Cables</strong>. 
+        Avec plus de <strong>15 ans d'expérience</strong>, je suis le professionnel qu'il vous faut pour alimenter vos locaux.
+        Si vous souhaitez en savoir plus sur moi ou sur mon entreprise, rendez vous sur la page <strong>About</strong>.
+      </p>
+      <button type="button" class="btn btn-secondary">En savoir plus &nbsp;<i class="fa-solid fa-arrow-right"></i></button>
     </div>
     <div class="col" style="height:500px">
       <img style=" width:500px" src="assets/ampoule.png">
@@ -36,4 +41,44 @@
   </div>
 </div>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,160L60,170.7C120,181,240,203,360,213.3C480,224,600,224,720,186.7C840,149,960,75,1080,53.3C1200,32,1320,64,1380,80L1440,96L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,160L80,149.3C160,139,320,117,480,133.3C640,149,800,203,960,197.3C1120,192,1280,128,1360,96L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+<div class="color-red-bg pt-5 pb-5" style="background-color:#049cfc">
+<div class="container">
+  <div class="row align-items-center justify-content-center justify-content-around" style="padding-top:80px; padding-bottom: 80px">
+    <div class="col" style="height:500px">
+      <img style=" width:500px" src="assets/ampoule.png">
+    </div>
+    <div class="col">
+      <h2 style="font-size:32px"> <strong>Préstations</strong></h2>
+      <p style="color:black;font-size:22px; font-weight:450">
+        3Cables couvre un grand nombre de prestations à prix différents selon la surface à travailler. 
+      </p>
+      <button type="button" class="btn btn-primary">En savoir plus &nbsp;<i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+  </div>
+</div>
+</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,160L80,149.3C160,139,320,117,480,133.3C640,149,800,203,960,197.3C1120,192,1280,128,1360,96L1440,64L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fcec04" fill-opacity="1" d="M0,64L80,90.7C160,117,320,171,480,170.7C640,171,800,117,960,96C1120,75,1280,85,1360,90.7L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+<div class="color-red-bg pt-5 pb-5" style="background-color:#fcec04">
+<div class="container">
+  <div class="row align-items-center justify-content-center justify-content-around" style="padding-top:80px; padding-bottom: 80px">
+    <div class="col">
+      <h2 style="font-size:32px"> <strong>Qui suis-je?</strong></h2>
+      <p style="color:black;font-size:22px; font-weight:450">
+        Mon nom est Monsieur <strong>A. GALISSARD</strong>, je suis un éléctriciens et gérant de l'entreprise <strong>3Cables</strong>. 
+        Avec plus de <strong>15 ans d'expérience</strong>, je suis le professionnel qu'il vous faut pour alimenter vos locaux.
+        Si vous souhaitez en savoir plus sur moi ou sur mon entreprise, rendez vous sur la page <strong>About</strong>.
+      </p>
+      <button type="button" class="btn btn-primary">En savoir plus &nbsp;<i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+    <div class="col" style="height:500px">
+      <img style=" width:500px" src="assets/ampoule.png">
+    </div>
+  </div>
+</div>
+</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fcec04" fill-opacity="1" d="M0,64L80,90.7C160,117,320,171,480,170.7C640,171,800,117,960,96C1120,75,1280,85,1360,90.7L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
 {% endblock %}
+<feat>
