<feat> changement presentation

--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -28,7 +28,7 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,224L80,202.7C160,181,320,139,480,154.7C640,171,800,245,960,250.7C1120,256,1280,192,1360,160L1440,128L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
     
 <div class="container">
-<h2 class="text-center" style="padding-top:30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; ">Mes études</h2>
-<div class="justify-content-around text-center">- 2 années de CAP électricien<br>- 1 année de TP électricien d'équipement du bâtiment</div>
+<h2 class="text-center" style="padding-top:300px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; ">Mes études</h2>
+<div class="justify-content-around text-center" style="padding-bottom:300px;">- 2 années de CAP électricien<br>- 1 année de TP électricien d'équipement du bâtiment</div>
 </div>
 {% endblock %}
