--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,14 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         <link rel="stylesheet" href="assets/bootstrap.min.css">
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+                <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/b20eb41686.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -16,41 +23,126 @@
         {% endblock %}
     </head>
     <body>
-    <link href="http://fonts.cdnfonts.com/css/segoe-ui-4" rel="stylesheet">
 <style>
     * {
-        font-family: 'Segoe UI', sans-serif;
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    @keyframes ampoule {
+        0% {
+            transform: rotate(0deg);
+        }
+        40% {
+            transform: rotate(5deg);
+        }
+        80% {
+            transform: rotate(-5deg);
+        }
+        90% {
+            transform: rotate(5deg);
+        }
+        95% {
+            transform: rotate(-5deg);
+        }
+        100% {
+            transform: rotate(0deg);
+        }
+    }
+
+    .imgs {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        transform: scale(1.2)
+    }
+    .ampoule {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        animation-duration: 10s;
+        animation-name: ampoule;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+    }
+    
+    @keyframes spark1{
+    0% {
+        transform:  translate(-25vw, -270px) scale(0.8);;
+    }
+    
+    50% {
+        transform:  translate(-25vw, -320px) scale(0.8);
+    }
+
+    100% {
+        transform:  translate(-25vw, -270px) scale(0.8);
+    }
+}
+
+    .spark1 {
+        position: absolute;
+        animation-duration: 6s;
+        animation-name: spark1;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+    }
+
+    @keyframes spark2{
+    0% {
+        transform:  translate(-10vw, -270px)  scale(0.8);;
+    }
+    
+    50% {
+        transform:  translate(-10vw, -320px)  scale(0.8);
+    }
+
+    100% {
+        transform:  translate(-10vw, -270px)   scale(0.8);
+    }
+
+    }
+    .spark2 {
+        position: absolute;
+        animation-duration: 5s;
+        animation-name: spark2;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+    }
+    .title {
+    display: flex;
+    flex-direction:row;
+    align-items: center;
     }
 </style>
 
- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+ <nav data-aos="fade-down"  class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <img class="navbar-brand" href="#" src="assets/logo.png" max-width:"100vh" >
+    <img class="navbar-brand" href="#" src="assets/logo.png" max-width:"100vh"><span style="color:white; font-size:32px">3Cables</span>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">
+    <divs class="collapse navbar-collapse justify-content-end" id="navbarColor01">
     <ul class="navbar-nav">
-        <li class="nav-item">
+        <li data-aos="fade-up" data-aos-delay="100" class="nav-item">
             <a class="nav-link active" href="#"><i class="fa-solid fa-house"></i> Home</a>
         </li>
-        <li class="nav-item">
+        <li data-aos="fade-up" data-aos-delay="200" class="nav-item">
             <a class="nav-link active" href="#"><i class="fa-solid fa-at"></i> About</a>
         </li>
-        <li class="nav-item">
+        <li data-aos="fade-up" data-aos-delay="300" class="nav-item">
             <a class="nav-link active" href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Prestation</a>
         </li>
-         <li class="nav-item">
-            <a class="nav-link active" href="#">Avis</a>
+         <li data-aos="fade-up" data-aos-delay="400" class="nav-item">
+            <a class="nav-link active" href="#"><i class="fa-solid fa-star"></i> Avis</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Contact</a>
+        <li data-aos="fade-up" data-aos-delay="500" class="nav-item">
+            <a class="nav-link active" href="#"><i class="fa-solid fa-phone"></i> Contact</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="#">|</a>
+        <li data-aos="fade-up" data-aos-delay="600" class="nav-item">
+            <a class="nav-link active">|</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Se connecter</a>
+        <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
+            <a class="nav-link active" href="#"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
         </li>
        
     </ul>
@@ -60,18 +152,19 @@
 </nav>
         {% block body %}{% endblock %}
     </body>
-<footer class="text-center">
+<footer class="text-center bg-primary">
         <div class="container text-muted py-4 py-lg-5">
            
             <p class="mb-0">Made with ❤️ by Colomeon for 3Cables.</p>
             <p class="mb-0"></p>
             <p class="mb-0"><a>About</a> - <a>Avis</a> - <a>Contact</a></p>
-            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
             <script src="assets/bootstrap/js/bootstrap.min.js"></script>
             <script>
                 AOS.init();
             </script>
+            <script src="assets/main.js"></script>
         </div>
     </footer>
 </html>
