--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,19 @@
     * {
         font-family: 'Montserrat', sans-serif;
     }
-
+    
+    body {
+        background: url("assets/back.jpg") repeat scroll 0
+    }
+    .glass-bg {
+/* From https://css.glass */
+    background: rgba(255, 255, 255, 0.10);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.8px);
+    -webkit-backdrop-filter: blur(4.8px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    }
     @keyframes ampoule {
         0% {
             transform: rotate(0deg);
@@ -48,6 +60,7 @@
             transform: rotate(0deg);
         }
     }
+
 
     .imgs {
         margin-left: auto;
@@ -124,26 +137,36 @@
     <divs class="collapse navbar-collapse justify-content-end" id="navbarColor01">
     <ul class="navbar-nav">
         <li data-aos="fade-up" data-aos-delay="100" class="nav-item">
-            <a class="nav-link active" href="#"><i class="fa-solid fa-house"></i> Home</a>
+            <a class="nav-link active" href="{{ path('app_site') }}"><i class="fa-solid fa-house"></i> Home</a>
         </li>
         <li data-aos="fade-up" data-aos-delay="200" class="nav-item">
-            <a class="nav-link active" href="#"><i class="fa-solid fa-at"></i> About</a>
+            <a class="nav-link active" href=""><i class="fa-solid fa-at"></i> About</a>
         </li>
         <li data-aos="fade-up" data-aos-delay="300" class="nav-item">
-            <a class="nav-link active" href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Prestation</a>
+            <a class="nav-link active" href=""><i class="fa-solid fa-screwdriver-wrench"></i> Prestation</a>
         </li>
          <li data-aos="fade-up" data-aos-delay="400" class="nav-item">
-            <a class="nav-link active" href="#"><i class="fa-solid fa-star"></i> Avis</a>
+            <a class="nav-link active" href=""><i class="fa-solid fa-star"></i> Avis</a>
         </li>
         <li data-aos="fade-up" data-aos-delay="500" class="nav-item">
-            <a class="nav-link active" href="#"><i class="fa-solid fa-phone"></i> Contact</a>
+            <a class="nav-link active" href=""><i class="fa-solid fa-phone"></i> Contact</a>
         </li>
         <li data-aos="fade-up" data-aos-delay="600" class="nav-item">
             <a class="nav-link active">|</a>
         </li>
-        <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
-            <a class="nav-link active" href="#"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
-        </li>
+        {% if app.user %} 
+        <li><p data-aos="fade-up" data-aos-delay="700" style="color:white"> Connecté avec :<br>{{ app.user.nom}} {{ app.user.prenom}} </p></li>
+            <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
+                <a class="nav-link active" href=""><i class="fa-solid fa-gear"></i> </i> Mon compte</a>
+            </li>
+                        <li data-aos="fade-up" data-aos-delay="800" class="nav-item">
+                <a class="nav-link active" href="{{ path('app_logout') }}"><i class="fa-solid fa-door-open"></i> Déconnexion</a>
+            </li>
+        {% else %}
+            <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
+                <a class="nav-link active" href="{{ path('app_login') }}"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
+            </li>
+        {% endif %}
        
     </ul>
        
