--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="container pb-5 pt-5" style="margin-top:80px">
+<div class="container pb-5 pt-5 glass-bg" style="margin-top:100px">
   <div class="row align-items-center justify-content-center justify-content-around">
     <div class="col">
       <img data-aos="fade-up" class="ampoule" style="margin-top: 100px; width:250px" src="assets/ampoule.png">
@@ -20,7 +20,6 @@
 
   </div>
 </div>
-
 
 
 <br>
