--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,42 +3,50 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-<form method="post">
-<div class="container" style="width:40%">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<form method="post" style="height:80vh">
+<div data-aos="fade-up" class="container glass-bg pb-5 pt-5" style="width:70%; margin-top: 9%">
+    <div class="row align-items-center justify-content-center justify-content-around">
+        <div class="col">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-           Vous êtes connecter comme {{ app.user.nom }} {{ app.user.prenom }}, <a href="{{ path('app_logout') }}">Logout</a>
+            {% if app.user %}
+                <div class="mb-3">
+                Vous êtes connecter comme {{ app.user.nom }} {{ app.user.prenom }}, <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
+            {% endif %}
+
+            <h1 data-aos="fade-up" class="h3 mb-3 font-weight-normal text-center" style="font-size:30px">Connectez vous</h1>
+            <label data-aos="fade-up" for="inputEmail" style="font-size: 20px; font-weight:600; color:black">Mail</label>
+            <input data-aos="fade-up" type="email"  value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> <br>    
+            <label data-aos="fade-up" for="inputPassword" style="font-size: 20px; font-weight:600; color:black">Mot de passe</label>
+            <input data-aos="fade-up" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+
+            {#
+                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                See https://symfony.com/doc/current/security/remember_me.html
+
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" name="_remember_me"> Remember me
+                    </label>
+                </div>
+            #}
+            <br>
+            <button data-aos="fade-up" class="btn btn-lg btn-primary" style="width:100%;" type="submit">
+                Se connecter</button>
+            <div data-aos="fade-up" style="color:black; font-weight:600" class="mt-3">Pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez vous</a></div>
         </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal text-center">Connectez vous</h1>
-    <label for="inputEmail" style="font-weight:500">Mail</label>
-    <input type="email"  value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> <br>    
-    <label for="inputPassword" style="font-weight:500">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+        <div class="col">
+          <img data-aos="fade-up" class="" style="margin-left:auto; margin-right:auto; display:block; width:25vw" src="assets/laptop.png">
         </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+    </div>
 </div>
-</form> <br>
+</form> 
+<br>
 {% endblock %}
