--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<div class="container pb-5 pt-5 glass-bg" style="margin-top:100px">
+<div data-aos="fade-up" class="container pb-5 pt-5 glass-bg" style="margin-top:100px">
   <div class="row align-items-center justify-content-center justify-content-around">
     <div class="col">
       <img data-aos="fade-up" class="ampoule" style="margin-top: 100px; width:250px" src="assets/ampoule.png">
@@ -13,11 +13,10 @@
       <h1  data-aos="fade-up" data-aos-delay="200" style="font-size:50px" class="title pt-5">
       <strong></strong></h1>
       <p data-aos="fade-up" data-aos-delay="300" class="text-primary" style="font-weight:500">Bienvenue sur le site de 3Cables</p>
-      <button data-aos="fade-up" data-aos-delay="400" type="button" class="btn btn-primary">Découvrir</button>
+      <a href="#presentation" data-aos="fade-up" data-aos-delay="400" type="button" class="btn btn-primary">Découvrir  &nbsp;<i class="fa-solid fa-arrow-right"></i></i></a>
     </div>
       <img data-aos="fade-up-left" class="ampoule spark1" style="margin-top: 100px; width:250px; text-align:center" src="assets/spark1.png">
       <img data-aos="fade-up-right" class="ampoule spark2" style="margin-top: 100px; width:250px; text-align:center" src="assets/spark2.png">
-
   </div>
 </div>
 
@@ -25,7 +24,7 @@
 <br>
 <br>
 <svg class="pt-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,160L60,170.7C120,181,240,203,360,213.3C480,224,600,224,720,186.7C840,149,960,75,1080,53.3C1200,32,1320,64,1380,80L1440,96L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
-<div class="color-red-bg pt-5 pb-5" style="background-color:#fc0404; ">
+<div id="presentation" class="color-red-bg pt-5 pb-5" style="background-color:#fc0404; ">
   <div class="container" style="padding-bottom: 150px; padding-top: 100px">
     <div class="row align-items-center justify-content-center justify-content-around" style="padding-top:80px; padding-bottom: 80px">
       <div class="col" data-aos="fade-right" >
