<Feat>Administration Presta

--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -86,4 +86,6 @@
   <div class="row align-items-center justify-content-center justify-content-around" style="padding-top:80px; padding-bottom: 80px">
     <h2>Contactez nous</h2>
   </div>
-</div>{% endblock %}
+</div>
+<script type="text/javascript">window.onload = function(){ type() }</script>
+{% endblock %}
