--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,15 +5,15 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        <link rel="stylesheet" href="assets/bootstrap.min.css">
+        <link rel="stylesheet" href="../../../assets/bootstrap.min.css">
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
                 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/b20eb41686.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+                
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -32,7 +32,7 @@ html {
     }
     
     body {
-        background: url("assets/back.jpg") repeat scroll 0
+        background: url("../../../assets/back.jpg") repeat scroll 0
     }
     .glass-bg {
     background: rgba(255, 255, 255, 0.10);
@@ -132,7 +132,7 @@ html {
 
  <nav data-aos="fade-down"  class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <img class="navbar-brand" href="#" src="assets/logo.png" max-width:"100vh"><span style="color:white; font-size:32px">3Cables</span>
+    <img class="navbar-brand" href="#" src="../../../assets/logo.png" max-width:"100vh"><span style="color:white; font-size:32px">3Cables</span>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -159,7 +159,7 @@ html {
         {% if app.user %} 
         <li><p data-aos="fade-up" data-aos-delay="700" style="color:white"> Connecté avec :<br>{{ app.user.nom }} {{ app.user.prenom }} </p></li>
             <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
-                <a class="nav-link active" href=""><i class="fa-solid fa-gear"></i> </i> Mon compte</a>
+                <a class="nav-link active" href="{{ path('app_menu') }}"><i class="fa-solid fa-gear"></i> </i> Mon compte</a>
             </li>
                         <li data-aos="fade-up" data-aos-delay="800" class="nav-item">
                 <a class="nav-link active" href="{{ path('app_logout') }}"><i class="fa-solid fa-door-open"></i> Déconnexion</a>
@@ -189,7 +189,7 @@ html {
             <script>
                 AOS.init();
             </script>
-            <script src="assets/main.js"></script>
+            <script src="../../../assets/main.js"></script>
         </div>
     </footer>
 </html>
