--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -6,7 +6,7 @@
 <style>
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-<h1 class="text-center" style="padding-top:280px; padding-bottom:280px; font-size:50px; font-family:arial narrow">Bienvenue sur la page de présentation<br><span style=" font-size: 25px"><i class="fa-solid fa-arrow-down"></i></span></h1>
+<h1 class="text-center" style="padding-top:280px; padding-bottom:280px; font-size:50px; font-family:arial narrow">Bienvenue sur la page de présentation<br><span style=" font-size: 25px;"><i class="fa-solid fa-arrow-down"></i></span></h1>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>    <div style="background-color: #fc0404">
     <div class="container">
     <h2 class="text-center" style="padding-top:30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; color:white">Qui suis-je ?</h2>
@@ -26,9 +26,15 @@
     </div>
   </div>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,224L80,202.7C160,181,320,139,480,154.7C640,171,800,245,960,250.7C1120,256,1280,192,1360,160L1440,128L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
-    
-<div class="container">
-<h2 class="text-center" style="padding-top:300px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; ">Mes études</h2>
-<div class="justify-content-around text-center" style="padding-bottom:300px;">- 2 années de CAP électricien<br>- 1 année de TP électricien d'équipement du bâtiment</div>
+
+<div class="container" style="display: grid; grid-template-columns: 1fr 0.25fr 1fr; grid-template-rows: 1fr; padding-bottom:200px; padding-top:200px;">
+<div class="card" style="display: grid; grid-area: 1 / 1 / 2 / 2; border-radius: 10px; background: #fc0404;">
+  <h2 class="text-center" style="padding-top: 30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; color:white">Mes études</h2>
+  <div class="justify-content-around text-center" style="padding-bottom:100px; color:white; font-size: 20px;">Pour en arriver où j'en suis, j'ai fait :<br>- 2 années de CAP électricien<br>- 1 année de TP électricien d'équipement du bâtiment</div>
+</div>
+<div class="card" style="display: grid; grid-area: 1 / 3 / 2 / 4; border-radius: 10px; background: #fc0404;">
+  <h2 class="text-center" style="padding-top: 30px; padding-bottom: 10px; font-size: 40px; font-family:arial narrow; color:white">Zone d'activié</h2>
+  <image style=" width : 400px; margin: auto; padding-bottom: 15px; " src="assets/Paris.PNG"></image>
+</div>
 </div>
 {% endblock %}
