<feat> last update prestation

--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -12,13 +12,13 @@
     <h2 class="text-center" style="padding-top:30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; color:white">Qui suis-je ?</h2>
     <div class="row align-items-center justify-content-around text-center" style="padding-top: 30px">
     <div class="col">
-      <image class="img" style=" width : 200px; border-radius: 100px 100px 100px 100px;" src="assets/image.jfif"></image>
+      <image class="img" style=" width : 250px; border-radius: 250px 250px 250px 250px;" src="assets/image.jfif"></image>
     </div>
     </div>
     <div class="row align-items-center justify-content-around text-center" style="padding-top: 40px">
     <div class="col" style="font-size: 20px; font-family:arial narrow; color:white">
-    Bonjour, je m'appelle Monsieur GALISSARD, j'ai 48 ans et je suis électricien de père en fils depuis 3 générations. Si tu es arrivé sur mon 
-    site, c'est que tu cherches un éléctriciens pour alimenter tes locaux, et je suis le professionnel qu'il te faut !
+    Bonjour, je m'appelle Monsieur GALISSARD, j'ai 48 ans et je suis électricien de père en fils depuis 3 générations. Si vous êtes arrivé sur mon 
+    site, c'est que vous cherchez un éléctricien pour alimenter tes locaux, et je suis le professionnel qu'il vous faut !
     J'espère pouvoir répondre à vos besoins grâce aux compétences que j'ai acquise durant mes études mais aussi grâce à
     mes 15 années d'activités.
     </div>
