--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -139,13 +139,13 @@ html {
     <divs class="collapse navbar-collapse justify-content-end" id="navbarColor01">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="/site">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
+            <a class="nav-link active" href="/about">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="#">Prestation</a>
+            <a class="nav-link active" href="/prestation">Prestation</a>
         </li>
          <li data-aos="fade-up" data-aos-delay="400" class="nav-item">
             <a class="nav-link active" href=""><i class="fa-solid fa-star"></i> Avis</a>
@@ -166,7 +166,7 @@ html {
             </li>
         {% else %}
             <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
-                <a class="nav-link active" href="{{ path('app_login') }}"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
+                <a class="nav-link active"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
             </li>
         {% endif %}
        
