--- a/templates/prestation/index.html.twig
+++ b/templates/prestation/index.html.twig
@@ -7,39 +7,60 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 <h1 class="text-center" style="padding-top:280px; padding-bottom:280px; font-size:50px; font-family:arial narrow">Voici mes différentes préstations<br><span style=" font-size: 25px;"><i class="fa-solid fa-arrow-down"></i></span></h1>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>    <div style="background-color: #049cfc">
-    <div class="container" style="display: grid; grid-template-columns: 1fr 0.25fr 1fr 0.25fr 1fr; grid-template-rows: 1fr 0.25fr 1fr;">
-        <div class="card" style="display: grid; grid-area: 1 / 1 / 2 / 2; border-radius: 10px; background: #0684D4;">
-          <h2 class="text-center" style="color: white;">Installation fibre (Souterrain)</h2>
-            <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 150€</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>    
+<div style="background-color: #049cfc">
+  <div class="container">
+    <div style="display: grid; grid-template-columns:33% 33% 33%; grid-gap: 30px ">
+      {% for prestation in prestations %}
+
+            <div class="card col-md-4" style="border-radius: 10px; background: #0684D4; width: 20vw">
+              <h2 class="text-center" style="color: white;">{{ prestation.libelle }}</h2>
+              <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/image_prestation/{{ prestation.image }}"></image>
+              <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">
+                ≃ {{ prestation.prix}}€
+              </div>
+            </div>
+      {% endfor %}
+          {# <div class="row justify-content-around text-center" style="">
+          <div class="card col" style="border-radius: 10px; background: #0684D4;">
+            <h2 class="text-center" style="color: white;">Installation fibre (Souterrain)</h2>
+              <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 150€</div>
+          </div>
+          <div class="card col" style=" border-radius: 10px; background: #0684D4;">
+            <h2 class="text-center" style="color: white;">Installation fibre (Aérien)</h2>
+              <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/fibre_aerien.PNG"></image>
+              <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 299€</div>
+          </div>
+          <div class="card col" style=" border-radius: 10px; background: #0684D4;">
+            <h2 class="text-center" style="color: white;">Pose d'une prise électrique</h2>
+            <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise.PNG"></image>
+            <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 80€/unité</div>
+          </div>
         </div>
-        <div class="card" style="display: grid; grid-area: 1 / 3 / 2 / 4; border-radius: 10px; background: #0684D4;">
-          <h2 class="text-center" style="color: white;">Installation fibre (Aérien)</h2>
-            <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/fibre_aerien.PNG"></image>
-            <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 299€</div>
+
+      <div class="row justify-content-around text-center" style="">
+          <div class="card col-md-4" style=" border-radius: 10px; background: #0684D4;">
+            <h2 class="text-center" style="color: white;">Remplacement prise électrique</h2>
+            <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise.PNG"></image>
+            <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 40€/unité</div>
+          </div>
+          <div class="card col-md-4" style="border-radius: 10px; background: #0684D4;">
+            <h2 class="text-center" style="color: white;">Pose d'une prise téléphonique</h2>
+            <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise_telephone.PNG"></image>
+            <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 150€/unité</div>
+          </div>
+          <div class="card col-md-4" style=" border-radius: 10px; background: #0684D4;">
+            <h2 class="text-center" style="color: white;">Remplacement prise téléphonique</h2>
+            <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise_telephone.PNG"></image>
+            <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 65€/unité</div>
+          </div>
         </div>
-        <div class="card" style="display: grid; grid-area: 1 / 5 / 2 / 6; border-radius: 10px; background: #0684D4;">
-          <h2 class="text-center" style="color: white;">Pose d'une prise électrique</h2>
-          <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise.PNG"></image>
-          <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 80€/unité</div>
-        </div>
-        <div class="card" style="display: grid; grid-area: 3 / 1 / 4 / 2; border-radius: 10px; background: #0684D4;">
-          <h2 class="text-center" style="color: white;">Remplacement prise électrique</h2>
-          <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise.PNG"></image>
-          <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 40€/unité</div>
-        </div>
-        <div class="card" style="display: grid; grid-area: 3 / 3 / 4 / 4; border-radius: 10px; background: #0684D4;">
-          <h2 class="text-center" style="color: white;">Pose d'une prise téléphonique</h2>
-          <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise_telephone.PNG"></image>
-          <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 150€/unité</div>
-        </div>
-        <div class="card" style="display: grid; grid-area: 3 / 5 / 4 / 6; border-radius: 10px; background: #0684D4;">
-          <h2 class="text-center" style="color: white;">Remplacement prise téléphonique</h2>
-          <image style=" width : 300px; margin: auto; padding-bottom: 15px; " src="assets/prise_telephone.PNG"></image>
-          <div class="justify-content-around text-center" style="padding-bottom:10px; color:white; font-size: 20px;">≃ 65€/unité</div>
-        </div>
-    </div>
-    </div>
+
+      </div>
+      </div> #}
+      </div>
+  </div>
+</div>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,224L80,202.7C160,181,320,139,480,154.7C640,171,800,245,960,250.7C1120,256,1280,192,1360,160L1440,128L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
 
 {% endblock %}
