--- a/templates/menu/prestations/index.html.twig
+++ b/templates/menu/prestations/index.html.twig
@@ -15,7 +15,10 @@
                 Libelle
             </div>
             <div class="col" style="font-size:30px; font-weight:600">
-                Description
+                Image
+            </div>
+            <div class="col" style="font-size:30px; font-weight:600">
+                Prix
             </div>
             <div class="col text-center" style="font-size:30px; font-weight:600">
                 Actions
@@ -29,8 +32,11 @@
                 <div class="col" style="font-size:26px">
                     {{ prestation.libelle}}
                 </div>
-                <div class="col" style="font-size:16px">
-                    {{ prestation.description }}
+                <div class="col" style="font-size:26px">
+                     {{ prestation.image}}
+                </div>
+                <div class="col" style="font-size:26px">
+                    {{ prestation.prix}}
                 </div>
                 <div class="col text-center" style="font-size:26px">
                     <a href="/menu/prestations/edit/{{ prestation.id }}" class="btn btn-primary edit-prestation" data-id="{{ prestation.id }}">Modifier</a>
