<feat>Ajout  fonction suppression avis et finalisation CSS

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -173,7 +173,7 @@ html {
         {% else %}
             <li data-aos="fade-up" data-aos-delay="700" class="nav-item">
 
-                <a class="nav-link active" href=""><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
+                <a class="nav-link active" href=" {{ path('app_login') }}"><i class="fa-solid fa-right-to-bracket"></i> Se connecter</a>
 
         {% endif %}
        
