--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -59,8 +59,10 @@
 
                 <a href="{{ path('app_prestation_show') }}" class="btn btn-primary">Gestion des préstations</a>
                 <p class="text-center" style="font-weight:500; color:#000">Menu pour gérer les préstations.</p>
-                <a href="" class="btn btn-primary">Gestion de la présentation</a>
-                <p class="text-center" style="font-weight:500; color:#000">Menu pour gérer la présentation.</p>
+                <a href="/about/editP" class="btn btn-primary">Gestion de la présentation (PERSONNELLE)</a>
+                <p class="text-center" style="font-weight:500; color:#000">Menu pour gérer la présentation personnelle.</p>
+                <a href="/about/editE" class="btn btn-primary">Gestion de la présentation (ETUDE)</a>
+                <p class="text-center" style="font-weight:500; color:#000">Menu pour gérer les études.</p>
             </div>
         </div>
     {% endif %}
