<Fix>Changement mail administration

--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -27,7 +27,7 @@
         
             <div class="col " style="background-color:#ebb113; border-radius: 22px  ">
             {% if app.user %} 
-              {% if app.user.email =="maildefou123@gmail.com" %}  
+              {% if app.user.email =="admin@cable.fr" %}  
               <a href="" data-id="{{avis.id}}" class="btn btn-danger delete_avis">Supprimer</a>
             
               {% endif %}
