--- a/templates/menu/prestations/add.html.twig
+++ b/templates/menu/prestations/add.html.twig
@@ -3,7 +3,14 @@
 {% block title %}Gestion{% endblock %}
 
 {% block body %}
-
+{% if app.user.email != "admin@cable.fr" %}
+    <script>
+        function redirect() {
+            document.location.replace("{{ path('app_site') }}")
+        }
+        redirect();
+    </script>
+{% endif %}
 
 <div class="container glass-bg mb-5 pt-5 pb-5" style="margin-top:80px">
     <h2 style="font-weight:700"> Ajouter une préstation </h2>
