--- a/templates/presentation/editEtude.html.twig
+++ b/templates/presentation/editEtude.html.twig
@@ -3,7 +3,14 @@
 {% block title %}Gestion{% endblock %}
 
 {% block body %}
-
+{% if app.user.email != "admin@cable.fr" %}
+    <script>
+        function redirect() {
+            document.location.replace("{{ path('app_site') }}")
+        }
+        redirect();
+    </script>
+{% endif %}
 <div class="container glass-bg mb-5 pt-5 pb-5" style="margin-top:80px">
     <h2 style="font-weight:700"> Modification des études</h2>
     {{ form_start(formE) }}
@@ -20,5 +27,6 @@
     {{ form_end(formE) }}
     </div>
 <div style="margin-bottom: 10%"> </div>
+
 
 {% endblock %}
