<Fix>Ajout d'espace

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block body %}
-<div class="container pb-5 pt-5 glass-bg" style="margin-top:100px">
+<div class="container pb-5 pt-5 glass-bg" style="margin-top:100px; margin-bottom: 200px">
   <div class="row align-items-center justify-content-center justify-content-around">
     <div class="col"  style="margin-left: 3vw">
       <h1 style="font-size:50px" class="pt-5">
@@ -12,7 +12,7 @@
       
     </div>
     <div class="col text-center">
-      <img style="width:250px;" src="assets/R.jfif"> <!-- Changer lien de l'image -->
+      <img style="width:250px;" src="assets/contact.png"> <!-- Changer lien de l'image -->
     </div>
   </div>
 </div>
@@ -40,6 +40,7 @@
   </div></br>
     </div>
   </div>
+<div class="container">
 
   <div class="row">
     <div class="col">
