--- a/templates/prestation/index.html.twig
+++ b/templates/prestation/index.html.twig
@@ -6,7 +6,7 @@
 <style>
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-<div class="container pb-5 pt-5 glass-bg" style="margin-top:100px; height: 50vh">
+<div class="container pb-5 pt-5 glass-bg" style="margin-top:100px; margin-bottom:220px; height: 50vh">
   <div class="row align-items-center justify-content-center justify-content-around">
     <div class="col text-center" style=" display: block;" data-aos="fade-up" data-aos-delay="400">
       <img style="width: 390px; padding-top: 100px;" src="assets/sale.png"> <!-- Changer lien de l'image -->
