--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -22,14 +22,14 @@
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fc0404" fill-opacity="1" d="M0,128L80,154.7C160,181,320,235,480,229.3C640,224,800,160,960,117.3C1120,75,1280,53,1360,42.7L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
 <div id="presentation" style="background-color: #fc0404">
     <div class="container" >
-    <h2 class="text-center" data-aos="fade-down-right" data-aos-duration="750"style="padding-top:30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; color:white">{{ presentation[0].titre }}</h2>
+    <h2 class="text-center" data-aos="fade-down-right" data-aos-duration="750"style="padding-top:30px; padding-bottom: 30px; font-weight: 500; font-size: 40px; color:white">{{ presentation[0].titre }}</h2>
     <div class="row align-items-center justify-content-around text-center" style="padding-top: 30px">
     <div class="col">
       <image class="img" data-aos="fade-down-left" data-aos-duration="750" style=" width : 250px; border-radius: 250px 250px 250px 250px;" src="assets/image.jfif"></image>
     </div>
     </div>
     <div class="row align-items-center justify-content-around text-center" style="padding-top: 40px">
-    <div class="col" data-aos="fade-down-right" data-aos-duration="750" style="font-size: 25px; font-family:arial narrow; color:white">{{ presentation[0].description }}
+    <div class="col" data-aos="fade-down-right" data-aos-duration="750" style="font-size: 25px; font-weight: 500; color:white">{{ presentation[0].description }}
     </div>
     </div>
     </div>
@@ -39,9 +39,9 @@
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#049cfc" fill-opacity="1" d="M0,160L80,149.3C160,139,320,117,480,133.3C640,149,800,203,960,197.3C1120,192,1280,128,1360,96L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
 <div class="color-red-bg pt-5 pb-5" style="background-color:#049cfc">
   <div class="container">
-    <h2 class="text-center" data-aos="fade-down-right" data-aos-duration="750" style="padding-top:30px; padding-bottom: 30px; font-size: 40px; font-family:arial narrow; color:white">{{ presentation[1].titre }}</h2>
+    <h2 class="text-center" data-aos="fade-down-right" data-aos-duration="750" style="padding-top:30px; padding-bottom: 30px; font-size: 40px; color:white">{{ presentation[1].titre }}</h2>
     <div class="row align-items-center justify-content-around text-center" style="padding-top: 30px">
-    <div class="col" data-aos="fade-down-left" data-aos-duration="750" style="font-size: 25px; font-family:arial narrow; color:white">{{ presentation[1].description }} </div>
+    <div class="col" data-aos="fade-down-left" data-aos-duration="750" style="font-size: 25px; font-weight: 500; color:white">{{ presentation[1].description }} </div>
   </div>
   </div>
 </div>
